--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+blinker==1.4
 boto==2.49.0
 certifi==2018.10.15
 chardet==3.0.4
@@ -5,6 +6,7 @@ Click==7.0
 Flask==1.0.2
 Flask-Assets==0.12
 flask-heroku==0.1.9
+Flask-Mail==0.9.1
 Flask-Scss==0.5
 Flask-Session==0.3.1
 Flask-SQLAlchemy==2.3.2
@@ -17,7 +19,9 @@ MarkupSafe==1.1.0
 psycopg2==2.7.6.1
 pyScss==1.3.5
 python-docx==0.8.7
+python-http-client==3.1.0
 requests==2.20.1
+sendgrid==5.6.0
 six==1.11.0
 SQLAlchemy==1.2.14
 urllib3==1.24.1
